--- a/app/src/main/res/layout/bplo_service3.xml
+++ b/app/src/main/res/layout/bplo_service3.xml
@@ -49,7 +49,7 @@
                             android:id="@+id/titleTextService3"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Issuance of Certification of Business Cessation"
+                            android:text="Issuance of Certification of No Business"
                             android:textColor="#49454F"
                             android:textSize="16sp"
                             android:textStyle="bold" />
